@@ -9,7 +9,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -106,7 +105,7 @@ public class CitationStyle {
                 text = CSLUtils.readURLToString(url, StandardCharsets.UTF_8.toString());
             } else {
                 // if the url is null then the style is located outside the classpath
-                text = new String(Files.readAllBytes(Paths.get(styleFile)), StandardCharsets.UTF_8);
+                text = new String(Files.readAllBytes(Path.of(styleFile)), StandardCharsets.UTF_8);
             }
             return createCitationStyleFromSource(text, styleFile);
         } catch (NoSuchFileException e) {
